# gsn_ai_personal_assitant

./: README.md  pyproject.toml  requirements.txt
app/: app.py  cli.py  config.py  input_listeners.py  recording_capabilities.py
app/schemas/: __init__.py  llm_dtos.py
app/services/: __init__.py  agent.py  eleven_labs.py  llm.py  mac_input_listener.py  mmm_agent.py  notion.py  prompts.py  recording_capabilities.py
